Make responsive TOC threshold wider, to prevent squish on medium screens

--- a/content/css/_page.scss
+++ b/content/css/_page.scss
@@ -65,7 +65,7 @@
     }
   }
 
-  @media (max-width: 425px) {
+  @media (max-width: 1200px) {
     flex-direction: column;
     align-items: stretch;
     padding: 0;
